# flask-boilerplate

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .env.prod.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  gitlab-ci.yml  pyproject.toml  requirements.txt  setup.py  {{ cookiecutter.project_slug }}-development.cfg.simple
{{cookiecutter.project_slug}}/scripts/: format.sh  npm  run-web  setup
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  default_settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cmd/: web.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/: __init__.py  acl.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/forms/: users.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/static/: package.json  tailwind.config.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/templates/components/forms/: date_input.html  error_handler.html  text_input.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/templates/components/login/: login_card.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/templates/layout/: alpinejs.html  base_layout.html  lucidejs.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/templates/site/: index.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/web/views/: __init__.py  sites.py
