[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.5"
flask-login = "^0.6.2"
flask-caching = "^2.0.2"
authlib = "^1.2.0"
flask-me = "^1.0.2"
flask-wtf = "^1.1.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }}-web = "{{ cookiecutter.project_slug }}.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
